syntax = "proto3";
package ciao.time_tracking;

import "ciao/accounts/account.proto";
import "ciao/common/time_range.proto";
import "ciao/time_tracking/clock_record.proto";
import "google/protobuf/duration.proto";

// Service for time tracking data
service TimeTrackingService {
  // Returns a single entry
  rpc Get(GetRequest) returns (GetResponse);

  // Returns a list of entries for the given filter
  rpc List(ListRequest) returns (stream ListResponse);

  // Clock and return the text to display
  rpc Clock(ClockRecord) returns (ClockResponse);

  // Update an existing entry
  rpc Update(UpdateRequest) returns (UpdateResponse);

  // Get information about the user
  rpc GetUserInfo(UserInfoRequest) returns (UserInfoResponse);
}

message GetRequest {
  // Find the clock record with this unique identifier
  string id = 1;
}

message GetResponse {
  ClockRecord record = 1;
}

// Request parameter for TimeTrackingService.list
message ListRequest {
  optional ciao.common.TimeRange time_range = 1;
  optional string user_id = 2;
  optional string creator_id = 3;
  optional string time_type_id = 4;
}

message ListResponse {
  repeated ClockRecord records = 1;
}

message ClockResponse {
  string message = 1;
  ClockRecord record = 2;
}

// Request parameter for TimeTrackingService.Update
message UpdateRequest {
  ClockRecord record = 1;
}

message UpdateResponse {
  ClockRecord record = 1;
}

message UserInfoRequest {
  // User id or badge id
  oneof identity {
    string user_id = 1;
    string badge_id = 2;
  }
}

// Information about the balance of a user
message BalanceInfo {
  // Current balance
  google.protobuf.Duration current = 2;
}

// Information about the vacation situation of a user
message VacationInfo {
  // Vacation entitlement
  optional google.protobuf.Duration entitlement = 1;

  // Remaining vacation
  optional google.protobuf.Duration remaining = 2;

  // Planned vacation
  optional google.protobuf.Duration planned = 3;
}

message UserInfoResponse {
  // Details for the user
  ciao.accounts.Account account = 1;

  // Information about the balance for this user
  optional BalanceInfo balance = 2;

  // Information about the vacation for this user
  optional VacationInfo vacation = 3;
}
