syntax = "proto3";
package ciao.time_tracking.time_type;

import "ciao/time_tracking/time_type/time_type.proto";

// Service for TimeType data
service TimeTypeService {
  // Returns a single TimeType
  rpc Get(GetRequest) returns (GetResponse);

  // Returns all TimeTypes that match the requests filter
  rpc List(ListRequest) returns (stream ListResponse);

  // Create a new time type
  rpc Create(CreateRequest) returns (CreateResponse);

  // Update an existing time type
  rpc Update(UpdateRequest) returns (UpdateResponse);

  // Delete a time type
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

// Request parameter for TimeTypeService.get
message GetRequest {
  string id = 1;
}

message GetResponse {
  TimeType time_type = 1;
}

// Request parameter for TimeTypeService.list
message ListRequest {
  optional bool absence = 1;
  optional bool bookable = 2;
}

message ListResponse {
  repeated TimeType time_types = 1;
}

// Create request & response
message CreateRequest {
  TimeType time_type = 1;
}

message CreateResponse {
  TimeType time_type = 1;
}

// Update request & response
message UpdateRequest {
  TimeType time_type = 1;
}

message UpdateResponse {
  TimeType time_type = 1;
}

// Delete request & response
message DeleteRequest {
  string id = 1;
}

message DeleteResponse {
  string message = 1;
}
